changed postions, created footer started session and sections

--- a/index.html
+++ b/index.html
@@ -58,8 +58,22 @@
 			</div>
 			<!-- nav desktop -->
 			<div class="desktop-nav show-on-desktop" role="navigation">
-				<div class="logo-container">
-					<img src="/media/images/rc-bazaar-logo-transp.png" alt="logo bazaar transparente">
+				<div class="menu-hamburguesa">
+					<input type="checkbox" id="menu-toggle" hidden>
+					<label for="menu-toggle">
+						<img src="/media/images/menu-hamb-blanco.png" class="logos" alt="menu hamburguesa blanco">
+					</label>
+	
+				<!-- Menú desplegable móvil -->
+					<div class="mobile-menu">
+						<ul>
+							<li><a href="#categories">CATEGORIAS</a></li>
+							<li><a href="#news">NOVEDADES</a></li>
+							<li><a href="/galery.html">GALERIA</a></li>
+							<li><a href="#forum">COMUNIDAD</a></li>
+							<li><a href="/register-formulary.html">REGISTRATE</a></li>
+						</ul>
+					</div>
 				</div>
 				<div class="search-container">
 					<input type="search" name="search" id="searching" placeholder="Que estas buscando?"
