--- a/started-session.html
+++ b/started-session.html
@@ -41,7 +41,7 @@
 							<li><a href="#news">NOVEDADES</a></li>
 							<li><a href="/galery.html">GALERIA</a></li>
 							<li><a href="#forum">COMUNIDAD</a></li>
-							<li><a href="/register-formulary.html">REGISTRATE</a></li>
+							<li><a href="/my-profile.html">MI PERFIL</a></li>
 						</ul>
 					</div>
 				</div>
@@ -51,7 +51,7 @@
 						class="searcher">
 				</div>
 				<div class="inicio-sesion">
-					<a href="/start-session.html">
+					<a href="/my-profile.html">
 						<img src="/media/images/ini-icon.jpg" class="logos" alt="icono login">
 					</a>
 				</div>
@@ -68,7 +68,7 @@
 				</div>
 				<div class="button-container">
 					<button class="button-ini">
-						<a href="/start-session.html">Registrate o Inicia sesion
+						<a href="/my-profile.html">Mi perfil
 						</a>
 						<img src="/media/images/ini-icon.jpg" class="icon" alt="icono inicio sesion">
 					</button>
@@ -84,4 +84,538 @@
 				</span></p>
 		</div>
 	</nav>
+	<section class="news" id="news">
+		<div class="news-container">
+			<div class="news-tittle">
+				<h2>Tus anuncios</h2>
+			</div>
+			<div class="cards-container">
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="news" id="news">
+		<div class="news-container">
+			<div class="news-tittle">
+				<h2>Tus favoritos</h2>
+			</div>
+			<div class="cards-container">
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="news" id="news">
+		<div class="news-container">
+			<div class="news-tittle">
+				<h2>Vistos recientemente</h2>
+			</div>
+			<div class="cards-container">
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image">
+						<img src="/media/images/space-image.png" alt="espacio para imagen">
+					</div>
+					<div class="card-text">
+						<div class="card-description">
+							<p class="card-price">
+								0€
+							</p>
+							<p class="card-tittle">
+								titulo objeto
+							</p>
+						</div>
+						<div class="view-button">
+							<button class="button-view">
+								<a href="#">VER</a>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="mobile-footer show-on-mobile">
+			<div class="footer-item">
+				<a href="/sell.html">
+					<img src="/media/icons/sell-icon.png" alt="Vender" />
+					<p>Vender</p>
+				</a>
+			</div>
+			<div class="footer-item">
+				<a href="/orders.html">
+					<img src="/media/icons/orders-icon.png" alt="Pedidos" />
+					<p>Pedidos</p>
+				</a>
+			</div>
+			<div class="footer-item">
+				<a href="/profile.html">
+					<img src="/media/icons/profile-icon.png" alt="Perfil" />
+					<p>Perfil</p>
+				</a>
+			</div>
+		</div>
+	</footer>
+	<a href="#top" class="back-to-top">
+		<button>
+			<img src="/media/images/up-arrow.png" alt="flecha arriba">
+		</button>
+	</a>
 </body>
